Update hero image source in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-image-container">
-                <img src="Gemini_Generated_Image_yekcwyekcwyekcwy.jpeg" alt="Rangish Selvam" class="hero-image">
+                <img src="Gemini_Generated_Image_yekcwyekcwyekcwy.png.jpeg" alt="Rangish Selvam" class="hero-image">
             </div>
             <h1 class="hero-name">Rangish Selvam</h1>
             <p class="hero-title">FullStack Developer & AI Student</p>
